--- a/css/confirm_alert.css
+++ b/css/confirm_alert.css
@@ -74,7 +74,7 @@
 	background-size: auto 28px !important;
 	border:none;
 	/* background-image: url(../img/ico_modulesB.png); */
-	background-image: url(../img/ico_puzzleB.png);
+	background-image: url(../img/ico_coccardaB.png);
 	background-position:1px center !important;
 	/* background-color: #cfcfcf; */
 	height:30px;
