--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -112,7 +112,7 @@ body:not(.smart) #impostazioniArchivi,
     vertical-align: middle;
     width: 30px;
     height: 32px;
-    background-image: url(../img/ico_puzzleN.png);
+    background-image: url(../img/ico_coccardaN.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: auto 26px;
