--- a/css/guida.css
+++ b/css/guida.css
@@ -549,7 +549,7 @@
 .btnLicenze{
 	display: inline-block;
     vertical-align: middle;
-	background-image: url(../img/ico_puzzleB.png);
+	background-image: url(../img/ico_coccardaB.png);
 	background-repeat: no-repeat;
 	background-position: 5px center;
 	background-size: auto 22px;
