--- a/css/popup_licenze.css
+++ b/css/popup_licenze.css
@@ -9,7 +9,7 @@
     margin-top: -250px;
 }
 #labelLicenze{
-	background-image:url(../img/ico_puzzleN.png);
+	background-image:url(../img/ico_coccardaN.png);
 	background-position:10px center;
 }
 #contLicenze{
