--- a/css/modulo_pazienti.css
+++ b/css/modulo_pazienti.css
@@ -509,7 +509,7 @@ body:not(.smart) #btnAnagraficaCliente i{
     width: 48px;
 }
 .smart.android .trattTools i{
-	width: 44px !important;
+	width: 44px;
 	height: 44px !important;
 	padding-top:7px;
 	padding-bottom:7px;
@@ -530,15 +530,25 @@ body:not(.smart) .trattTools i:not(.infoCiclo):not(.addTrattBtn):hover{
 	background-repeat:no-repeat;
 }
 .riepilogoBtn{
+	background-image: url(../img/ico_statsT.png);
 	background-repeat:no-repeat;
 	background-position:center center, center center;
 }
-.smart.android .riepilogoBtn{
-	background-position:center center, center center !important;
+.smart .riepilogoBtn{
+	width: 70px !important;
+    padding-top: 20px !important;
+    background-position: center 5px, center center;
 }
-.riepilogoBtn{
-	background-image: url(../img/ico_statsT.png);
-}
+.smart .riepilogoBtn span{
+	display: block !important;
+    font-size: var(--font-12-1) !important;
+    font-style: normal;
+	width:calc(100%);
+	white-space: nowrap;
+	overflow:hidden;
+	text-overflow: ellipsis;
+} 
+
 .eliminaBtn{
 	width: 32px !important;
     border-right: 1px solid rgba(0,0,0,0.4);
