--- a/css/popup_registrazione.css
+++ b/css/popup_registrazione.css
@@ -34,6 +34,9 @@
 	overflow-y: auto;
 	height: 430px;
 }
+.smart #contRegistrazione{
+	height: calc(100% - 40px);
+}
 #labelRegistrazione{
 	font-size: var(--font-19-8);
 	color:#000;
@@ -70,11 +73,11 @@
 	text-align:justify;
 }
 .smart #testoRegistrazione{
-	background-size: auto 74px;
-	background-image: url(../img/logo_iaomai_mini.png);
-	background-repeat: no-repeat;
-	background-position: center 8px;
-	padding-top: 110px;
+	background-size: auto 75px;
+    background-image: url(../img/logo_iaomai_mini.png);
+    background-repeat: no-repeat;
+    background-position: center 30px;
+    padding-top: 141px;
 }
 
 
