--- a/css/popup.css
+++ b/css/popup.css
@@ -27,7 +27,7 @@
 	margin-top:0px !important;
 }
 @media (max-width: 400px){
-	.popup{
+	.popup:not(#ai){
 		width:100% !important;
 		left:0px !important;
 		border-radius:0px !important;
