--- a/css/forms.css
+++ b/css/forms.css
@@ -2709,6 +2709,11 @@ body:not(.touch) .contGallery > div:not(.noResults) > div:hover img.spunta_pic{
     overflow-y: auto;
     line-height: 18px;
     max-height: 200px;
+	-webkit-user-select: text !important;
+	-khtml-user-select: text !important;
+	-moz-user-select: text !important;
+	-ms-user-select: text !important;
+	user-select: text !important;
 }
 .spiegazioneAI{
 	margin-top:5px;
